<resources>
    <string name="app_name">AgricFund</string>
    <string name="hint_dob">Enter Age</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid D.O.B</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Don\'t have an account yet Register !!</string>
    <string name="btn_link_login">Already have an account Login !!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Share</string>
    <string name="action_play_next">Like</string>
    <string name="backdrop_title">TAKE THE CORNER</string>
    <string name="backdrop_subtitle">Your Best Soccer News.</string>
    <string name="title_activity_details">Take The Corner Soccer</string>
    <string name="loading">Loading</string>
    <string name="title_activity_header_article">Header_article</string>
</resources>
